fix hero specing on mobile

--- a/app/_components/hero/Hero.module.css
+++ b/app/_components/hero/Hero.module.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 4rem;
+  gap: 2.4rem;
   justify-content: center;
 }
 
